--- a/package.json
+++ b/package.json
@@ -101,7 +101,9 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.3.1",
-    "@types/styled-components": "^5.1.15"
+    "@types/styled-components": "^5.1.15",
+    "svg-sprite-loader": "^6.0.10",
+    "svgo-loader": "^3.0.0"
   },
   "jest": {
     "roots": [
